--- a/index.html
+++ b/index.html
@@ -24,7 +24,8 @@
   <title>Coffee Shop</title>
 </head>
 <body>
-
+  <!-- Loader -->
+  <div id="preloader"></div>
   <!-- Header -->
   <header class="header">
     <nav class="nav container flex">
